2008-05-31  Andreas Färber  <andreas.faerber@web.de>

	* configure.in (big-arrays): Output fix.
	  Display "no" in absence of --enable-big-arrays.

	Contributed unter MIT/X11 license.

2008-05-27 Rodrigo Kumpera  <rkumpera@novell.com>

	* configure.in: Add configure option for big arrays.

	  Patch by Luis F. Ortiz.
	  Contributed under X11 license.
	  http://lists.ximian.com/pipermail/mono-devel-list/2008-May/027995.html

2008-05-23  Wade Berrier  <wberrier@novell.com>

	* scripts/Makefile.am: remove mbas script since we don't ship it anymore
	(fixed bnc#393903)

2008-05-22 Marek Safar  <marek.safar@gmail.com>

	* Makefile.am: Distribute 2.0 profile specific files.

2008-05-21  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4: New file, contains a snapshot of dolt.

	* configure.in: Add support for the DOLT libtool replacement.

2008-05-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Change the way CPPFLAGS/CFLAGS are passed to libgc one more
	time. This time, we collect them in two variables and pass these to libgc
	configure instead of using the standard CPPFLAGS/CFLAGS, to prevent problems
	during reconfiguring. Also pass '-mno-tls-direct-segment-refs' to libgc 
	configure, hopefully fixing #385006.

2008-05-15  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a check for sgen and __thread. Fixes #347171.

2008-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* configure.in, data/Makefile.am, data/dotnet35.pc : 
	  add new package for .net framework 3.5 libs.

2008-05-12  Raja R Harinath  <harinath@hurrynot.org>

	* scripts/mono-service.in: Undo 2008-05-08.  '2>&1' is not a bash-ism.

2008-05-09  Zoltan Varga  <zovarga@debian.chello.hu>

	* Makefile.am (get-monolite-latest): Create mcs/lib if not existing.

2008-05-08  Robert Jordan  <robertjj@gmx.net>

	* scripts/mono-service.in: Replace bash-ism with `sh' syntax.

2008-05-07  Sebastien Pouliot  <sebastien@ximian.com>

	* data/net_[1_1|2_0]/machine.config: Add entry to remap the public 