@@ -1684,6 +1684,53 @@ if test "x$enable_big_arrays" = "xyes" ; then
 	AC_DEFINE(MONO_BIG_ARRAYS,1,[Enable the allocation and indexing of arrays greater than Int32.MaxValue])
 fi
 
+AC_MSG_CHECKING([if DTrace support is requested])
+AC_ARG_ENABLE(dtrace,[  --enable-dtrace	Enable DTrace probes], enable_dtrace=$enableval, enable_dtrace=no)
+AC_MSG_RESULT($enable_dtrace)
+dtrace_g=no
+if test "x$enable_dtrace" = "xyes"; then
+	AC_DEFINE(ENABLE_DTRACE, 1, [Enable DTrace probes])
+	AC_PATH_PROG(DTRACE, [dtrace], [no], [$PATH:/usr/sbin])
+	if test "x$DTRACE" = "xno"; then
+		AC_MSG_FAILURE([DTrace requested but not found])
+	fi
+	DTRACEFLAGS=
+	if test "x$ac_cv_sizeof_void_p" = "x8"; then
+		case "$host" in
+			powerpc-*-darwin*)
+			DTRACEFLAGS="-arch ppc64"
+			;;
+			i*86-*-darwin*)
+			DTRACEFLAGS="-arch x86_64"
+			;;
+			*)
+			DTRACEFLAGS=-64
+			;;
+		esac
+	else
+		case "$host" in
+			powerpc-*-darwin*)
+			DTRACEFLAGS="-arch ppc"
+			;;
+			i*86-*-darwin*)
+			DTRACEFLAGS="-arch i386"
+			;;
+			*)
+			DTRACEFLAGS=-32
+			;;
+		esac
+	fi
+	AC_SUBST(DTRACEFLAGS)
+	case "$host" in
+		*-*-solaris*)
+		dtrace_g=yes
+		;;
+	esac
+	AC_CHECK_HEADERS([sys/sdt.h])
+fi
+AM_CONDITIONAL(ENABLE_DTRACE, [test x$enable_dtrace = xyes])
+AM_CONDITIONAL(DTRACE_G_REQUIRED, [test x$dtrace_g = xyes])
+
 TARGET="unknown"
 ACCESS_UNALIGNED="yes"
 
